dev-deployments/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-angular-service
spec:
  selector:
    app: demo-angular
  ports:
  - port: 80
    targetPort: 80
